module3-solution/css/styles.css
body {
  color: black;
  font-size: 16px;
  font-family: Arial, Helvetica, sans-serif;
  background-color: #E2F6F4;
}

/* Header */
#header-nav {
  background-color: #7B908D;
  border: 0;
  border-radius: 0;
  width: 100vw;
}

.navbar-brand h1 { /* restaurant name */
  color: black;
  font-size: 2em;
  margin-top: -10px;
  vertical-align: center;
}

.navbar-brand a:hover { 
  text-decoration: none;
}

/* Navbar */
button.navbar-toggle { /* nav button */
  clear: both;
  margin-top: -40px;
}

.icon-bar { /* button */
  clear: both;
  float: left;
  border: 1px solid white;
  border-radius: 1px;
  vertical-align: center;
}

#nav-list { /* collapsable nav menu */
  background-color: #D7FDF9;
  font-size: 1.25em;
  text-align: center;
}

#nav-list li {
  border: 1px solid #7B908D;
}

#nav-list a:hover{
  background: #99B4B1;
  text-decoration: none;
}

#nav-list a {
  color: black;
  text-align: center;
}

/* Content */
.menu { /* Our menu */
  text-align: center;
  padding: 0 0 10px 0;
}

.menu-section { /* Chicken, Beef, Sushi */
  background-color: #7B908D;
  margin-bottom: 20px;
}

